--- a/Trivia/Alpha/index.html
+++ b/Trivia/Alpha/index.html
@@ -11,7 +11,11 @@
     <body>
         <p id="error" class="visual-container">Error!<!-- display:none; by default --></p>
         <h1 class="visual-container">Trivia!</h1>
-        <div style="text-align: center;max-width: var(--max-ui-width); margin-left: auto; margin-right: auto;">This is a alpha release; it's kinda clunky, and was designed to give me practice with <code>fetch</code></div>
+        <div style="text-align: center;max-width: var(--max-ui-width); 
+        margin-left: auto; margin-right: auto;">This is a alpha release; it's 
+            kinda clunky, and was designed to give me practice with <code>fetch
+            </code>. There's definitely also minor logic problems and ways to 
+            break the UI. They will be fixed in the next update.</div>
         <div id="category-info">Category is... <span id="category">Loading</span></div>
         <div id="trivia" class="visual-container">
             <div id="question" class="visual-container">Question is Loading!</div>
