--- a/Trivia/Beta/index.html
+++ b/Trivia/Beta/index.html
@@ -15,11 +15,7 @@
     <body>
         <p id="error" class="visual-container">Error!<!-- display:none; by default --></p>
         <h1>Trivia!</h1>
-        <div style="text-align: center;max-width: var(--max-ui-width); 
-        margin-left: auto; margin-right: auto;">This is a alpha release; it's 
-            kinda clunky, and was designed to give me practice with <code>fetch
-            </code>. There's definitely also minor logic problems and ways to 
-            break the UI. They will be fixed in the next update.</div>
+        <p id="message" class="visual-container"></p>
         <div id="category-info">Category is... <span id="category">Loading</span></div>
         <div id="trivia">
             <div id="question">Question is Loading!</div>
